fixed image not showing

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    /* overflow: hidden; */
 
 }
 .container1{
